TODO List

1. ListView更新为Recyclerview，更方便美观（完成）
2. 为APP设置图标（完成）
3. 更改记录的布局文件，变得更美观，方便操作（完成）
4. 新增按钮颜色提示，红色按钮表示当前状态不可点击（完成）
5. 新增大量toast提示，方便用户操作（完成）
6. 增加更多无人机状态检验，增加程序健壮性（完成）
7. 视频展示
8. PPT
