@@ -8,6 +8,7 @@
         <entry key="..\:/Users/gelon/Desktop/StickFight/UXSDKDemo/app/src/main/res/layout/activity_view.xml" value="0.20471014492753623" />
         <entry key="..\:/Users/gelon/Desktop/StickFight/UXSDKDemo/app/src/main/res/layout/point.xml" value="0.20471014492753623" />
         <entry key="..\:/Users/gelon/Desktop/StickFlight/StickFlight/app/src/main/res/drawable/ic_close_gray_24dp.xml" value="0.2453125" />
+        <entry key="..\:/Users/gelon/Desktop/StickFlight/StickFlight/app/src/main/res/layout/activity_select.xml" value="0.17617753623188406" />
         <entry key="..\:/Users/gelon/Desktop/StickFlight/StickFlight/app/src/main/res/layout/activity_task_main.xml" value="0.18704710144927536" />
         <entry key="..\:/Users/gelon/Desktop/StickFlight/StickFlight/app/src/main/res/layout/activity_view.xml" value="0.18704710144927536" />
         <entry key="..\:/Users/gelon/Desktop/StickFlight/StickFlight/app/src/main/res/layout/point.xml" value="0.1743659420289855" />
