@@ -151,27 +151,27 @@
 
     <!--Take off and return home buttons on left -->
     <LinearLayout
-        android:layout_width="30dp"
+        android:layout_width="40dp"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginStart="6dp"
         android:orientation="vertical">
 
         <dji.ux.widget.TakeOffWidget
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginBottom="6dp"/>
 
         <dji.ux.widget.ReturnHomeWidget
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginTop="6dp"/>
 
         <ImageButton
             android:id="@+id/route_editor"
-            android:background="@drawable/ic_btn"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:background="@drawable/ic_edit"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginTop="6dp"/>
     </LinearLayout>
 
