@@ -6,6 +6,10 @@ TODO List
 4. 新增按钮颜色提示，红色按钮表示当前状态不可点击（完成）
 5. 新增大量toast提示，方便用户操作（完成）
 6. 增加更多无人机状态检验，增加程序健壮性（完成）
+6. 程序容易闪退，特别是遥控器状态必须是P档才能设置CONTROLMODEL，增加错误提示（完成）
+6. 修改路径编辑图标使得界面更加统一（完成）
+6. 统一按钮颜色，允许使用全部为蓝色，不允许使用为红色（完成）
+6. 新增isEnableStick校验，避免isEnableStick没有设置成功就允许用户开始虚拟控制（完成）
 7. 视频展示
 8. PPT
 
